--- a/majalaat/src/app/app.component.html
+++ b/majalaat/src/app/app.component.html
@@ -1,5 +1,58 @@
-بسم الله الرحمن الرحيم
+<div class="mat-app-background">
 
-<h1>مجالات</h1>
 
-<router-outlet></router-outlet>
+    <mat-toolbar [color]="themeColor">
+
+
+        <button mat-icon-button fxShow="true" fxHide.gt-sm="true">
+            <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
+        </button>
+
+
+        <a routerLink="/" class="title">
+            <h1>مجالات</h1>
+        </a>
+
+        <div fxShow="true" fxHide.lt-md="true">
+            <!-- The following menu items will be hidden on both SM and XS screen sizes -->
+            <a *ngFor="let page of pages" routerLink="/{{page.path}}" routerLinkActive="active-page"
+                mat-button>{{page.title}}</a>
+
+        </div>
+
+        <span class="spacer"></span>
+
+        <mat-icon (click)="toggleTheme()" matTooltip="تغيير الثيم">
+            brightness_6
+        </mat-icon>
+
+    </mat-toolbar>
+
+
+
+    <mat-sidenav-container fxFlexFill class="example-container">
+        <mat-sidenav #sidenav fxLayout="column">
+            <div fxLayout="column">
+                <!-- <a (click)="sidenav.toggle()" mat-button>
+            <mat-icon>
+              close
+            </mat-icon>
+          </a> -->
+                <a *ngFor="let page of pages" routerLink="/{{page.path}}" routerLinkActive="active-page" mat-button
+                    (click)="sidenav.toggle()">{{page.title}}</a>
+
+            </div>
+        </mat-sidenav>
+        <mat-sidenav-content class="main-container">
+
+
+
+            <router-outlet></router-outlet>
+
+
+
+
+        </mat-sidenav-content>
+    </mat-sidenav-container>
+
+</div>
