--- a/majalaat/src/styles.scss
+++ b/majalaat/src/styles.scss
@@ -1,1 +1,43 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/theming";
+@include mat-core();
+
+html,
+body {
+    height: 100%;
+    background-color: #fafafa;
+}
+body {
+    margin: 0;
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700&display=swap");
+$custom-typography: mat-typography-config(
+    $font-family: "Almarai",
+    $headline: mat-typography-level(32px, 48px, 700),
+    $body-1: mat-typography-level(16px, 24px, 500),
+    $button: mat-typography-level(16px, 24px, 500),
+    $input: mat-typography-level(inherit, 1.125, 400),
+);
+
+@include mat-base-typography($custom-typography);
+@include angular-material-typography($custom-typography);
+// @include mat-button-typography($custom-typography);
+
+// Light theme
+$light-primary: mat-palette($mat-green);
+$light-accent: mat-palette($mat-green);
+$theme-light: mat-light-theme($light-primary, $light-accent);
+
+// Dark theme
+$dark-primary: mat-palette($mat-blue-grey);
+$dark-accent: mat-palette($mat-amber, A200, A100, A400);
+$dark-warn: mat-palette($mat-deep-orange);
+$theme-dark: mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
+
+.theme-light {
+    @include angular-material-color($theme-light);
+}
+
+.theme-dark {
+    @include angular-material-color($theme-dark);
+}
