--- a/majalaat/src/app/app.component.scss
+++ b/majalaat/src/app/app.component.scss
@@ -34,14 +34,6 @@ a:active {
     min-width: 100%;
 }
 
-// .mat-sidenav-container {
-//     position: absolute !important;
-//     height: 100%;
-//     min-height: 100%;
-//     width: 100%;
-//     min-width: 100%;
-// }
-
 .center-center {
     display: flex;
     align-items: center;
@@ -57,4 +49,9 @@ a:active {
 
 .spacer {
     flex: 1 1 auto;
+}
+
+.block {
+    display: block;
+    width: 100%;
 }
