major + home page filters

--- a/majalaat/src/app/about/about.component.html
+++ b/majalaat/src/app/about/about.component.html
@@ -1,1 +1,18 @@
-<p>about works!</p>
+<p>
+
+    #التوجيه_الدراسي هو مسألة مهمّة جدّا. يمكن كلنا كطلّاب أكادميّين بشي مرحلة تخبّطنا بخصوص اختيار مجال الدراسة، مكان
+    التعليم، كان عنّا تساؤلات بخصوص السكن، فترة التعليم، المنح أو امكانيّات العمل لاحقا الخ...
+    مع إنّه في عدّة مبادرات ونشاطات مباركة بتساهم في مساعدة طلّابنا المقبلين على التعليم إلّا إنّه برأيي بعد في حاجة
+    كبيرة لمساهمة، خصوصا إنّه قسم من النشاطات (مثل أيّام التوجيه الدراسي) ما صارت من فترة بسبب أزمة الكورونا الحاليّة.
+    بفكّر ممكن أعمل موقع بسيط يشبّك بين المقبلين على التعليم لبين طلّاب وخرّيجين إلي ممكن يفيدوهم من تجربتهم. مثلا إذا
+    طالبة مفكرة تدرس مجال التمريض وحابّة تسمع من تجربة طلّاب حاليّين في عدّة معاهد أو من تجربة ممرضّة اشتغلت في المجال
+    لكم سنة فممكن تدخل على الموقع وتتواصل معهم بسهولة إن شاء الله.
+    طبعا الموقع رح يعتمد بالأساس على الخير الكبير الموجود في مجتمعنا وعلى كميّة الأكادميّين والأكاديميّات الرائعين الي
+    ممكن يساهموا كمتطوّعين.
+    بما انه فترة التسجيل للتعليم على الأبواب (أو بدأت بالفعل في قسم من المعاهد) فمفكّر أعمل نسخة أولية من الموقع في
+    الأيّام القريبة إن شاء الله إذا برأيكم في حاجة والإشي ممكن يفيد.
+    شو رأيكم؟ مين رح يحب يساهم ويتطوّع في هيك مشروع؟ ومين بتعرفوا أشخاص مقبلين على التعليم ممكن يستفيدوا؟
+    طبعا الفكرة حاليا انه يكون التواصل بين المقبلين على التعليم وبين الأكاديميّية عبب الوتسأب أو الفيسبوك مثلا.
+
+
+</p>
