--- a/majalaat/src/app/app.component.html
+++ b/majalaat/src/app/app.component.html
@@ -21,10 +21,10 @@
         </div>
 
         <span class="spacer"></span>
-
+        <!-- 
         <mat-icon (click)="toggleTheme()" matTooltip="تغيير الثيم">
             brightness_6
-        </mat-icon>
+        </mat-icon> -->
 
     </mat-toolbar>
 
