--- a/majalaat/src/app/_variables.scss
+++ b/majalaat/src/app/_variables.scss
@@ -1,3 +1,3 @@
-$primary-color: #1c6151;
+$primary-color: #03a9f4;
 $action-color: saturate(lighten($primary-color, 10%), 20%);
 $background-color: #fafafa;
