--- a/majalaat/src/styles.scss
+++ b/majalaat/src/styles.scss
@@ -39,5 +39,73 @@ $theme-dark: mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
 }
 
 .theme-dark {
-    @include angular-material-color($theme-dark);
+    // @include angular-material-color($theme-dark);
+    @include angular-material-color($theme-light);
+}
+
+.spacer {
+    flex: 1 1 auto;
+}
+
+mat-toolbar {
+    mat-icon {
+        cursor: pointer;
+    }
+
+    .title {
+        margin-left: 16px;
+    }
+}
+
+a,
+a:hover,
+a:visited,
+a:active {
+    color: inherit;
+    text-decoration: none;
+}
+
+.mat-drawer-container {
+    height: 100;
+}
+
+.mat-sidenav-container {
+    position: absolute !important;
+    height: 100%;
+    min-height: 100%;
+    width: 100%;
+    min-width: 100%;
+}
+
+.center-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.content {
+    padding: 32px;
+    padding-bottom: 64px;
+    overflow-x: hidden;
+    background: transparent;
+}
+
+.spacer {
+    flex: 1 1 auto;
+}
+
+.block {
+    display: block;
+    width: 100%;
+}
+
+hr {
+    border: none;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    margin: 32px auto;
+    width: 80%;
+}
+
+.space-up {
+    margin-top: 32px;
 }
