--- a/majalaat/src/app/app.component.html
+++ b/majalaat/src/app/app.component.html
@@ -1,7 +1,17 @@
 <div class="mat-app-background">
 
 
+    <div id="spinner-container" class="center-center" *ngIf="showSpinner">
+
+        <mat-spinner></mat-spinner>
+
+    </div>
+
+
     <mat-toolbar [color]="themeColor">
+
+
+
 
 
         <button mat-icon-button fxShow="true" fxHide.gt-sm="true">
@@ -25,6 +35,9 @@
         <mat-icon (click)="toggleTheme()" matTooltip="تغيير الثيم">
             brightness_6
         </mat-icon> -->
+
+        <span>{{userService.user.remainingCredit}}</span>
+        <mat-icon>eco</mat-icon>
 
     </mat-toolbar>
 
