--- a/majalaat/src/app/app.component.scss
+++ b/majalaat/src/app/app.component.scss
@@ -1,1 +1,11 @@
 @import "~src/app/_variables";
+
+#spinner-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: white;
+    z-index: 100;
+}
