--- a/majalaat/src/app/home/home.component.html
+++ b/majalaat/src/app/home/home.component.html
@@ -37,15 +37,47 @@
 
 
             <div class="center-center">
-                <button mat-stroked-button (click)="toggleFilter('gender','female')" class="filter-toggle"
-                    [class.selected]="filterArgs.gender.includes('female')"><i class="fa fa-female"></i></button>
+                <button mat-stroked-button (click)="toggleFilter('gender',VOLUNTEER_GENDER.FEMALE)"
+                    class="filter-toggle" [class.selected]="filterArgs.gender.includes(VOLUNTEER_GENDER.FEMALE)"><i
+                        class="fa fa-female"></i></button>
 
-                <button mat-stroked-button (click)="toggleFilter('gender','male')" class="filter-toggle"
-                    [class.selected]="filterArgs.gender.includes('male')"><i class="fa fa-male"></i></button>
+                <button mat-stroked-button (click)="toggleFilter('gender',VOLUNTEER_GENDER.MALE)" class="filter-toggle"
+                    [class.selected]="filterArgs.gender.includes(VOLUNTEER_GENDER.MALE)"><i
+                        class="fa fa-male"></i></button>
 
             </div>
+
+
+
+
             <hr />
 
+
+            <div class="center-center">
+                <button mat-stroked-button (click)="toggleFilter('status',VOLUNTEER_STATUS.STUDENT)"
+                    class="filter-toggle" [class.selected]="filterArgs.status.includes(VOLUNTEER_STATUS.STUDENT)">
+                    طالب\ة</button>
+
+                <button mat-stroked-button (click)="toggleFilter('status',VOLUNTEER_STATUS.RECENT_GRADUATE)"
+                    class="filter-toggle"
+                    [class.selected]="filterArgs.status.includes(VOLUNTEER_STATUS.RECENT_GRADUATE)">
+
+                    خريج\ة حديثا
+
+                </button>
+
+
+                <button mat-stroked-button (click)="toggleFilter('status',VOLUNTEER_STATUS.GRADUATE)"
+                    class="filter-toggle" [class.selected]="filterArgs.status.includes(VOLUNTEER_STATUS.GRADUATE)">
+
+                    خريج\ة
+
+                </button>
+            </div>
+
+
+
+            <hr />
 
 
             <button mat-stroked-button *ngFor="let town of towns" (click)="toggleFilter('towns',town)"
