--- a/majalaat/src/app/about/about.component.html
+++ b/majalaat/src/app/about/about.component.html
@@ -1,18 +1,92 @@
+<header style="text-align: center;">
+
+    <h1>مجالات</h1>
+
+    <h2>
+        مبادرة مجتمعيّة تهدف إلى مساعدة كلّ مقبل على التعليم في مجتمعنا العربي
+
+        على اختيار المجال والمكان الدراسي الأنسب لميوله وطموحه وقدراته وظروفه.
+
+    </h2>
+
+</header>
+
+<hr />
+
 <p>
 
-    #التوجيه_الدراسي هو مسألة مهمّة جدّا. يمكن كلنا كطلّاب أكادميّين بشي مرحلة تخبّطنا بخصوص اختيار مجال الدراسة، مكان
-    التعليم، كان عنّا تساؤلات بخصوص السكن، فترة التعليم، المنح أو امكانيّات العمل لاحقا الخ...
-    مع إنّه في عدّة مبادرات ونشاطات مباركة بتساهم في مساعدة طلّابنا المقبلين على التعليم إلّا إنّه برأيي بعد في حاجة
-    كبيرة لمساهمة، خصوصا إنّه قسم من النشاطات (مثل أيّام التوجيه الدراسي) ما صارت من فترة بسبب أزمة الكورونا الحاليّة.
-    بفكّر ممكن أعمل موقع بسيط يشبّك بين المقبلين على التعليم لبين طلّاب وخرّيجين إلي ممكن يفيدوهم من تجربتهم. مثلا إذا
-    طالبة مفكرة تدرس مجال التمريض وحابّة تسمع من تجربة طلّاب حاليّين في عدّة معاهد أو من تجربة ممرضّة اشتغلت في المجال
-    لكم سنة فممكن تدخل على الموقع وتتواصل معهم بسهولة إن شاء الله.
-    طبعا الموقع رح يعتمد بالأساس على الخير الكبير الموجود في مجتمعنا وعلى كميّة الأكادميّين والأكاديميّات الرائعين الي
-    ممكن يساهموا كمتطوّعين.
-    بما انه فترة التسجيل للتعليم على الأبواب (أو بدأت بالفعل في قسم من المعاهد) فمفكّر أعمل نسخة أولية من الموقع في
-    الأيّام القريبة إن شاء الله إذا برأيكم في حاجة والإشي ممكن يفيد.
-    شو رأيكم؟ مين رح يحب يساهم ويتطوّع في هيك مشروع؟ ومين بتعرفوا أشخاص مقبلين على التعليم ممكن يستفيدوا؟
-    طبعا الفكرة حاليا انه يكون التواصل بين المقبلين على التعليم وبين الأكاديميّية عبب الوتسأب أو الفيسبوك مثلا.
+    <br />
+
+    اختيار المجال الدراسيّ والمهنيّ هو من القرارات الحياتيّة المهمّة.
+    <br />
+    ولا يخفى على أيّ منّا كم الحيرة والارتباك والتخبّط المصحوب به هكذا قرار.
+
+    <br /><br />
+    ولعّل من أفضل ما يساعد المقبل على التعليم على بلورة صورة أوضح حول المجال الذي يفكّر في دراسته هو استشارة الأشخاص من
+    حوله وسؤال نصحهم.
+
+    <br /><br />
+    ولكّن العثور على الأشخاص المناسبين لاستشارتهم ليس بالسهل بتاتا، فالمجالات الدراسيّة والمعاهد الأكاديميّة متعدّدة
+    جدا، وفي كثير من الأحيان يصعب على الشّخص العثور على أشخاص درسوا مجالا معيّنا في المؤسّسة التعليميّة المعني بها، أو
+    أشخاص تشبه ظروفهم ظروفه.. أو لعلّه يبحث عن إجابات حول طبيعة العمل في المجال أو حول أمور السكن وغيرها..
+
+    <br /><br />
+
+    ومن هنا جاءت فكرة "مجالات"، وهي منصّة تهدف إلى مساعدة كلّ مقبل على التعليم في مجتمعنا العربي على اختيار المجال
+    والمكان الدراسي الأنسب لميوله وطموحه وقدراته وظروفه. حيث تتيح النسخة الأولى من المنصّة إمكانيّة التشبيك والتواصل
+    المباشر مع أشخاص خاضوا تجربة شبيهة لتلك التي يقف القبل على التعليم على عتبتها، أو يدرسون الآن موضوعا في مؤسّسة يفكّر
+    بالالتحاق بها، أو أشخاص تخرّجوا وعملوا في مجال لسنوات عدّة ويمكنهم تقديم النّصح حول العمل في المجال وطبيعته.
+
+    <br /><br />
+
+    طبعا، لا يمكن لمنصّة كهذه أن تنجح، أوأن تقوم حتّى، إلّا بتكاتف الجهود الخيّرة الكثير الموجودة داخل مجتمعنا. حيث أنّ
+    من يقدّم يد النّصح والمشورة هم أنتم وأنتنّ أيها الأكاديميّون والأكاديميّات الأعزّاء. وهنا، نهيب بكم جميعا أن تساهموا
+    عبر التسجيل في هذا النموذج وتكونوا عونا لطلّاب وأكاديمي المستقبل، لنخلق معا واقعا ومستقبلا أفضل لكلّ مقبل على
+    التعليم عندنا ولمجتمعنا العربي برمّته!
+
+    <br /><br />
+
+    ومن يدري، فلعلّ دقيقة من وقتك تسدي بها نصيحة لمقبل على التعليم، تترك في مسيرته أثرا كبيرا، وتترك في صحيفة أعمالك
+    خيرا كثيرا.
+
+    <br /><br />
+
+    بارك الله بكم،
+    طاقم مجالات
 
 
 </p>
+
+<hr />
+
+
+<section>
+
+    <header> ملاحظات:</header>
+
+    <ul>
+
+        <li> يمكن تعديل معطياتك في أي وقت بعد تسليم النموذج وذلك بالدخول إلى نفس هذا النموذج مستخدما بريدك الالكتروني
+        </li>
+
+        <li> لضمان عدم إزعاجكم متطوّعينا الأعزّاء، فإنّ المنظومة تقوم بتحديد عدد الأشخاص الذين يستطيع المقبل على التعليم
+            التواصل معهم في كلّ أسبوع </li>
+    </ul>
+
+</section>
+
+
+<section>
+
+    <header> روابط إضافيّة:</header>
+
+    <ul>
+
+        <li><a> اتفاقيّة الخصوصيّة</a>
+        </li>
+        <li><a> شروط الاستخدام</a></li>
+
+    </ul>
+
+
+</section>
