--- a/majalaat/src/app/volunteer/volunteer.component.scss
+++ b/majalaat/src/app/volunteer/volunteer.component.scss
@@ -2,6 +2,11 @@
     display: block;
     font-size: smaller;
     margin-bottom: 0px;
+    cursor: pointer;
+
+    * {
+        cursor: pointer;
+    }
 }
 
 .contact-btn {
