--- a/majalaat/src/app/volunteer/volunteer.component.html
+++ b/majalaat/src/app/volunteer/volunteer.component.html
@@ -1,18 +1,18 @@
-<a routerLink="volunteer/{{volunteer.id}}">
-    <mat-card>
-        <label class="name">
+<!-- <a  routerLink="volunteer/{{volunteer.id}}"> -->
+<mat-card>
+    <label class="name">
 
-            <small class="icon-wrapper"><i class="fa {{genderIcon}}"></i></small>
-            {{volunteer.name.first}} {{volunteer.name.last}}
+        <small class="icon-wrapper"><i class="fa {{genderIcon}}"></i></small>
+        {{volunteer.name.first}} {{volunteer.name.last}}
 
-        </label>
-
-
-        <label>
-            <span> {{volunteer.field}} - {{volunteer.institute}} </span>
-        </label>
+    </label>
 
 
-    </mat-card>
+    <label>
+        <span> {{volunteer.field}} - {{volunteer.institute}} </span>
+    </label>
 
-</a>
+
+</mat-card>
+
+<!-- </a> -->
