--- a/majalaat/src/app/about/about.component.html
+++ b/majalaat/src/app/about/about.component.html
@@ -80,11 +80,10 @@
 
     <header> روابط إضافيّة:</header>
 
-    <ul>
-
-        <li><a> اتفاقيّة الخصوصيّة</a>
+    <ul class="links">
+        <li><a routerLink="/about/privacy-policy"> سياسة الخصوصيّة</a>
         </li>
-        <li><a> شروط الاستخدام</a></li>
+        <li><a routerLink="/about/terms-of-use"> شروط الاستخدام</a></li>
 
     </ul>
 
