--- a/majalaat/src/app/about/about.component.scss
+++ b/majalaat/src/app/about/about.component.scss
@@ -11,3 +11,12 @@ section {
         font-weight: bold;
     }
 }
+
+.links {
+    li {
+        margin-top: 8px;
+    }
+    a {
+        text-decoration: underline;
+    }
+}
