--- a/majalaat/src/app/app.component.scss
+++ b/majalaat/src/app/app.component.scss
@@ -13,3 +13,20 @@
 .main-container {
     padding: 16px;
 }
+
+// .mat-drawer-container {
+//     overflow: visible;
+//     position: unset !important;
+// }
+
+.title {
+    height: 100%;
+    display: flex;
+    align-items: center;
+
+    img {
+        filter: brightness(100);
+        height: 32px;
+        margin-inline-end: 8px;
+    }
+}
