--- a/majalaat/src/app/home/home.component.html
+++ b/majalaat/src/app/home/home.component.html
@@ -3,7 +3,8 @@
     <span>
         متطوّع ومتطوّعة
         <br>
-        يساهمون معا في مساعدة كلّ مقبل ومقبلة على التعليم في مجتمعنا العربي على اختيار المجال والمكان الدراسي الأنسب
+        يساهمون معا في مساعدة كلّ مقبل ومقبلة على التعليم، وكلّ طالب جديد في مجتمعنا العربي على اختيار المجال والمكان
+        الدراسيّ الأنسب
         لميولهم، طموحم، قدراتهم وظروفهم!
     </span>
 </div>
