--- a/majalaat/src/app/volunteer-profile/volunteer-profile.component.html
+++ b/majalaat/src/app/volunteer-profile/volunteer-profile.component.html
@@ -52,7 +52,7 @@
 
 
             <a mat-raised-button class="contact-btn block action-btn" color="primary" style="background-color: #25D366;"
-                href="https://api.whatsapp.com/send/?phone=%2B972{{volunteer.phone}}&text">
+                href="https://api.whatsapp.com/send/?phone=%2B972{{volunteer.phone}}&text={{msgText}}">
 
                 <i class="fa fa-whatsapp"></i>
                 رسالة وتسأب
