--- a/majalaat/src/app/volunteer/volunteer.component.html
+++ b/majalaat/src/app/volunteer/volunteer.component.html
@@ -2,7 +2,7 @@
 <mat-card>
     <label class="name">
 
-        <small class="icon-wrapper"><i class="fa {{genderIcon}}"></i></small>
+        <!-- <small class="icon-wrapper"><i class="fa {{genderIcon}}"></i></small> -->
         {{volunteer.name.first}} {{volunteer.name.last}}
 
     </label>
