--- a/majalaat/src/app/home/home.component.html
+++ b/majalaat/src/app/home/home.component.html
@@ -11,7 +11,7 @@
 
 
 
-<a class="block join-btn"
+<a class="block join-btn" target="_blank"
     href="https://docs.google.com/forms/d/e/1FAIpQLScTF9AHiqFggAVP4kPz29nRpVNr5IP_XNmm8uMUlVxzaGe2qg/viewform"
     mat-raised-button color="accent">انضمّوا الآن!</a>
 
