--- a/majalaat/src/app/useful-links-page/useful-links-page.component.html
+++ b/majalaat/src/app/useful-links-page/useful-links-page.component.html
@@ -2,8 +2,8 @@
     هل لديكم أي رابط أو مرجع مفيد للطلاب أو المقبلين على التعليم؟ شاركوهم به الآن!
 </span>
 
-<a class="block contribute-btn"
-    href="https://docs.google.com/forms/d/e/1FAIpQLScTF9AHiqFggAVP4kPz29nRpVNr5IP_XNmm8uMUlVxzaGe2qg/viewform"
+<a class="block contribute-btn" target="_blank"
+    href="https://docs.google.com/forms/d/e/1FAIpQLSey0XS4vuBfbERbsL9Dfjoi92HK_TU_Hyv7YzXNxCYQDsF8pA/viewform"
     mat-raised-button color="accent">اقتراح رابط مفيد</a>
 
 
