changed home page + removed limits

--- a/majalaat/src/app/app.component.html
+++ b/majalaat/src/app/app.component.html
@@ -48,8 +48,11 @@
         </mat-icon> -->
 
 
-        <span (click)="showCreditExplaining();">{{userService.user.remainingCredit}}</span>
-        <mat-icon (click)="showCreditExplaining();">eco</mat-icon>
+
+        <!-- <span (click)="showCreditExplaining();">{{userService.user.remainingCredit}}</span>
+        <mat-icon (click)="showCreditExplaining();">eco</mat-icon> -->
+
+
 
         <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Main menu" fxShow="true" fxHide.gt-sm="true">
             <mat-icon>more_vert</mat-icon>
