--- a/majalaat/src/app/home/home.component.html
+++ b/majalaat/src/app/home/home.component.html
@@ -38,7 +38,7 @@
 
     <strong>{{volunteersCount}}</strong>
 
-    متطوّع ومتطوّعة في مجالات. ومن يدري، فلعلّ دقيقة من وقتك تسدي بها نصيحة لمقبل على التعليم، تترك في مسيرته أثرا
+    متطوّع ومتطوّعة في مجالات. فلعلّ دقيقة من وقتك تسدي بها نصيحة لمقبل على التعليم، تترك في مسيرته أثرا
     كبيرا، وتترك في صحيفة أعمالك خيرا
     كثيرا.
 
