--- a/majalaat/src/app/volunteer-profile/volunteer-profile.component.html
+++ b/majalaat/src/app/volunteer-profile/volunteer-profile.component.html
@@ -26,14 +26,15 @@
 
     </section>
 
-    <p>{{volunteer.bio}}</p>
+    <p *ngIf="volunteer.bio">{{volunteer.bio}}</p>
 
 
 
     <section id="contact" *ngIf=userService.canContact>
 
 
-        <a mat-raised-button class="block action-btn" href="{{volunteer.profileLink}}" target="_blank">
+        <a *ngIf="volunteer.profileLink" mat-raised-button class="block action-btn" href="{{volunteer.profileLink}}"
+            target="_blank">
 
             <i class="fa {{linkIcon}}"></i>
 
@@ -50,20 +51,28 @@
 
         <section *ngIf="showContactInfo" class="contact-section">
 
-
-            <a mat-raised-button class="contact-btn block action-btn" color="primary" style="background-color: #25D366;"
+            <a *ngIf="volunteer.howToContact == VOLUNTEER_CONTACT_CHANNEL.WHATSAPP; else emailContact" mat-raised-button
+                class="contact-btn block action-btn" color="primary" style="background-color: #25D366;"
                 href="https://api.whatsapp.com/send/?phone=%2B972{{volunteer.phone}}&text={{msgText}}">
 
                 <i class="fa fa-whatsapp"></i>
                 رسالة وتسأب
-
             </a>
 
+            <ng-template #emailContact>
+                <a mat-raised-button class="contact-btn block action-btn" color="accent"
+                    href="mailto:{{volunteer.email}}?subject=مجالات - مساعدة من فضلك&body={{msgText}}">
+                    <mat-icon>email</mat-icon>
+                    بريد الكتروني
+                </a>
+            </ng-template>
 
-            <a mat-raised-button class="contact-btn block action-btn" color="accent"
-                href="https://api.whatsapp.com/send/?phone=%2B972{{volunteer.phone}}&text">
-                <mat-icon>email</mat-icon>
-            </a>
+
+
+
+
+
+
 
 
             <!-- <div fxFlex="75%">
