--- a/majalaat/src/app/home/home.component.html
+++ b/majalaat/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<header style="text-align: center;">
+<header>
 
     <h3>
         مبادرة مجتمعيّة تهدف إلى مساعدة كلّ مقبل على التعليم في مجتمعنا العربي
