direct link to linksCategory section

--- a/majalaat/src/app/useful-links-page/useful-links-page.component.html
+++ b/majalaat/src/app/useful-links-page/useful-links-page.component.html
@@ -13,7 +13,7 @@
 
     <section *ngFor="let linkGroup of links">
 
-        <header>
+        <header id="cat-{{linkGroup.title}}">
             <h2>{{linkGroup.title}}</h2>
         </header>
 
